@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  [Incompatible Changes]
+  - The cache `file` has no default, and should be set by the user unless the `cache` is overridden.
 
 v0.1.2    2022-11-15 14:52:21+00:00 Europe/London
   [Tests]
